--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -2,9 +2,8 @@
   font-family: 'Inter', sans-serif;
   font-size: 18px;
   font-style: normal;
+  font-weight: normal;
   line-height: 18px;
-  padding: 0;
-  margin: 0;
   color: #FFFFFF;
   transition: opacity 0.3s ease-in-out;
 }
