--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,6 +1,6 @@
 .place__website {
-  padding: 0;
-  margin: 0;
+  display: flex;
+  flex-direction: column;
   align-self: flex-end;
 }
 
