--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,6 +1,7 @@
 .place {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: minmax(390px, 1fr) 1fr;
+  grid-template-rows: auto;
   column-gap: 40px;
   row-gap: 48px;
   padding-bottom: 80px;
@@ -18,6 +19,7 @@
 
 @media screen and (max-width: 768px) {
   .place {
+    grid-template-columns: minmax(230px, 1fr) 1fr;
     column-gap: 28px;
     padding-bottom: 73px;
   }
@@ -26,6 +28,7 @@
 @media screen and (max-width: 320px) {
   .place {
     grid-template-columns: 1fr;
+    grid-template-rows: auto;
     row-gap: 30px;
     padding-bottom: 48px;
   }
